src/test/ui-fulldeps/fluent-messages/test.stderr
error: could not open Fluent resource
  --> $DIR/test.rs:25:29
   |
LL |         missing_absolute => "/definitely_does_not_exist.ftl",
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: os-specific message

error: could not open Fluent resource
  --> $DIR/test.rs:34:29
   |
LL |         missing_relative => "../definitely_does_not_exist.ftl",
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: os-specific message

error: could not parse Fluent resource
  --> $DIR/test.rs:43:28
   |
LL |         missing_message => "./missing-message.ftl",
   |                            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: see additional errors emitted

error: expected a message field for "missing_message"
 --> ./missing-message.ftl:1:1
  |
1 | missing_message =
  | ^^^^^^^^^^^^^^^^^
  |

error: overrides existing message: `a_b_key`
  --> $DIR/test.rs:53:16
   |
LL |         a_b => "./duplicate-a-b.ftl",
   |                ^^^^^^^^^^^^^^^^^^^^^
   |
help: previously defined in this resource
  --> $DIR/test.rs:52:14
   |
LL |         a => "./duplicate-a.ftl",
   |              ^^^^^^^^^^^^^^^^^^^

error: name `slug_with_hyphens_this-slug-has-hyphens` contains a '-' character
  --> $DIR/test.rs:62:30
   |
LL |         slug_with_hyphens => "./slug-with-hyphens.ftl",
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: replace any '-'s with '_'s

error: attribute `label-has-hyphens` contains a '-' character
  --> $DIR/test.rs:71:31
   |
LL |         label_with_hyphens => "./label-with-hyphens.ftl",
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: replace any '-'s with '_'s

error: name `with-hyphens` contains a '-' character
  --> $DIR/test.rs:90:23
   |
LL |         test_crate => "./missing-crate-name.ftl",
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: replace any '-'s with '_'s

error: name `with-hyphens` does not start with the crate name
  --> $DIR/test.rs:90:23
   |
LL |         test_crate => "./missing-crate-name.ftl",
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: prepend `test_crate_` to the slug name: `test_crate_with_hyphens`

error: name `test-crate_foo` contains a '-' character
  --> $DIR/test.rs:90:23
   |
LL |         test_crate => "./missing-crate-name.ftl",
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: replace any '-'s with '_'s

error: aborting due to 9 previous errors

